--- a/ansible/roles/k3s_master/tasks/main.yml
+++ b/ansible/roles/k3s_master/tasks/main.yml
@@ -1,25 +1,4 @@
 ---
-- name: Set hostname
-  hostname:
-    name: "k3s-master"
-  register: hostname_changed
-
-- name: Update /etc/hosts
-  lineinfile:
-    path: /etc/hosts
-    line: "127.0.1.1 k3s-master"
-    regexp: '^127\.0\.1\.1'
-    state: present
-
-- name: Reboot if hostname changed
-  reboot:
-  when: hostname_changed.changed
-
-- name: Install required packages
-  apt:
-    name: "{{ system_packages }}"
-    state: present
-    update_cache: true
 
 - name: Disable swap
   command: swapoff -a
@@ -31,16 +10,24 @@
     regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
     replace: '# \1'
 
+- name: Load br_netfilter module
+  modprobe:
+    name: br_netfilter
+    state: present
+
+- name: Ensure br_netfilter module is loaded at boot
+  lineinfile:
+    path: /etc/modules-load.d/k8s.conf
+    line: br_netfilter
+    create: yes
+    mode: '0644'
+
 - name: Configure sysctl for Kubernetes
   sysctl:
-    name: "{{ item.name }}"
-    value: "{{ item.value }}"
+    name: net.bridge.bridge-nf-call-iptables
+    value: "1"
     state: present
     reload: true
-  with_items:
-    - { name: "net.bridge.bridge-nf-call-iptables", value: "1" }
-    - { name: "net.ipv4.ip_forward", value: "1" }
-    - { name: "vm.swappiness", value: "0" }
 
 - name: Create K3s config directory
   file:
