--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -2,16 +2,24 @@
 k3s_version: "v1.28.4+k3s2"
 
 # Configuration réseau
-master_ip: "192.168.1.109"
+master_ip: "192.168.1.100"
 network_cidr: "10.42.0.0/16"
 service_cidr: "10.43.0.0/16"
 
 # Configuration système
 system_packages:
+  - sudo
   - curl
+  - wget
+  - openssh-server
+  - qemu-guest-agent
+  - ca-certificates
   - python3
   - python3-pip
-  - ntp
+  - git
+  - iproute2
+  - gnupg
+  - nfs-common   
   - open-iscsi
   - nfs-common
   - htop
@@ -39,18 +47,14 @@ metallb_ip_range: "192.168.1.200-192.168.1.250"
 ingress_nginx_version: "4.9.0"
 ingress_nginx_namespace: "ingress-nginx"
 
-# Configuration Cert-Manager
-cert_manager_version: "1.13.3"
-cert_manager_namespace: "cert-manager"
-
 # Configuration NFS Provisioner
 nfs_provisioner_version: "4.0.18"
 nfs_provisioner_namespace: "nfs-provisioner"
-nfs_server: "192.168.1.100"  # À adapter selon votre serveur NFS
-nfs_path: "/srv/nfs/k8s"     # À adapter selon votre configuration
+nfs_server: "192.168.1.103"  
+nfs_path: "/srv/nfs/k8s"     
 
 # Configuration Odoo
 odoo_namespace: "odoo"
 odoo_version: "26.0.0"
-odoo_hostname: "odoo.local"  # À adapter selon votre domaine
+odoo_hostname: "odoo.local"  
 odoo_storage_class: "nfs-client"
