--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,15 +1,18 @@
 [master]
-k3s-master ansible_host=192.168.1.79 ansible_user=ubuntu ansible_password=admin
+k3s-master ansible_host=192.168.1.100
 
 [worker]
-k3s-worker-1 ansible_host=192.168.1.80 ansible_user=ubuntu ansible_password=admin
-k3s-worker-2 ansible_host=192.168.1.81 ansible_user=ubuntu ansible_password=admin
+k3s-worker-1 ansible_host=192.168.1.101
+k3s-worker-2 ansible_host=192.168.1.102
+
+[nfs]
+vm-nfs ansible_host=192.168.1.103
 
 [k3s_cluster:children]
 master
 worker
 
 [all:vars]
+ansible_user=ubuntu
 ansible_python_interpreter=/usr/bin/python3
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-ansible_sudo_pass=admin 
+ansible_ssh_common_args='-o StrictHostKeyChecking=no' 
